--- a/package.json
+++ b/package.json
@@ -9,12 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "autosuggest-highlight": "^3.1.1",
+    "bulma": "^0.9.3",
+    "d3": "^7.0.1",
+    "file-system": "^2.2.2",
     "next": "11.1.0",
+    "prop-types": "^15.7.2",
+    "rc-slider": "^9.7.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-autosuggest": "^10.1.0",
+    "react-dom": "17.0.2",
+    "recharts": "^2.1.1",
+    "recoil": "^0.4.0",
+    "recoilize": "^2.0.1",
+    "sass": "^1.38.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0"
+    "babel-plugin-styled-components": "^1.13.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "11.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.3.2"
   }
 }
